# GitScribe

./: .gitignore  README.md  env.example  package-lock.json  package.json  requirements.txt  vite.config.ts
backend/: README.md  main.py  pyproject.toml  requirements.txt  server.py  setup.py
backend/api/: main.py  redis_db.py
backend/gitscribe/: __init__.py  client.py  generator.py  git_utils.py  main.py
backend/gitscribe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/: App.css  App.tsx  main.tsx
src/components/: CopyText.tsx  FileCompareViewr.tsx  FormatCard.tsx  GeneraterBar.tsx  LoginButton.tsx  LoginpageCard.tsx  MessageComponent.tsx  ModalBox.tsx  NavBar.tsx  NumberInputComponent.tsx  Profile.tsx  SideBar.tsx  SubmissionInput.tsx  UploadFile.tsx  UploadForm.tsx
src/functions/: filesUpload.js  uploadFiles.js
